tdf#143899 compat15 layout: restrict body fly to PAGE_PRINT_AREA

For some inexplicable reason,
Microsoft decided to change a non-table layout restriction
for DOCX >= 2013.

Now most floating objects are not allowed to cross
the vertical margin (header/footer) boundaries
(although floating tables are one exception)
(and so are framePr textboxes)
(and horizontal margin boundaries can still be crossed).

This is similar to layoutInCell's
whimsical vertical aversion to margins.

There are already good unit tests in place
to ensure compat14 works, and for the compat15 table exception.
(see earlier patchsets for all affected unit tests)

make CppunitTest_sw_ooxmlexport9 CPPUNIT_TEST_NAME=testTdf103544
make CppunitTest_sw_ooxmlexport21 CPPUNIT_TEST_NAME=testTdf143899

Change-Id: I5788c35e57cbc84a6b5fcd0ef97dc4394b0f6395
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172536
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>